tweaks, slider component

--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
   </label>
 
   <label>
+    <input type="checkbox" disabled>
+    Hello world
+  </label>
+
+  <label>
+    <input type="checkbox" checked disabled>
+    Hello world
+  </label>
+
+  <label>
     <input type="checkbox" class="indeterminate">
     Hello world
 
@@ -84,6 +94,21 @@
   <label>
     <input type="radio" name="example" checked>
     Hello world
+  </label>
+
+  <label>
+    <input type="radio" name="example" disabled>
+    Hello world
+  </label>
+
+  <hr>
+  <h2>Slider</h2>
+
+  <label>
+    <input type="range">
+  </label>
+  <label>
+    <input type="range" disabled>
   </label>
 </body>
 </html>
