--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
   </style>
 </head>
 <body>
+  <hr>
+  <h2>Input</h2>
+  <input type="text" value="Default value">
+  <input type="text" placeholder="Placeholder">
+  <input type="text" value="Default value" disabled>
+  <br>
+  <textarea>Default value</textarea>
+  <textarea disabled>Default value</textarea>
+
+  <hr>
+  
   <h2>Buttons</h2>
   <button>Button</button>
   <button disabled>Button</button>
