--- a/index.html
+++ b/index.html
@@ -20,24 +20,36 @@
   </style>
 </head>
 <body>
+  <h2>Progress</h2>
+
+  <progress value="0.5"></progress>
+  <br>
+  <progress></progress>
+
   <hr>
+
   <h2>Input</h2>
+
   <input type="text" value="Default value">
+  <br>
   <input type="text" placeholder="Placeholder">
+  <br>
   <input type="text" value="Default value" disabled>
   <br>
   <textarea>Default value</textarea>
+  <br>
   <textarea disabled>Default value</textarea>
 
   <hr>
   
   <h2>Buttons</h2>
+
   <button>Button</button>
   <button disabled>Button</button>
-
+  <br>
   <input type="button" value="Button">
   <input type="button" value="Button" disabled>
-
+  <br>
   <a href="/" role="button">Button</a>
   <a href="/" role="button" aria-disabled="true">Button</a>
 
@@ -69,22 +81,22 @@
     <input type="checkbox">
     Hello world
   </label>
-
+  <br>
   <label>
     <input type="checkbox" checked>
     Hello world
   </label>
-
+  <br>
   <label>
     <input type="checkbox" disabled>
     Hello world
   </label>
-
+  <br>
   <label>
     <input type="checkbox" checked disabled>
     Hello world
   </label>
-
+  <br>
   <label>
     <input type="checkbox" class="indeterminate">
     Hello world
@@ -95,29 +107,32 @@
   </label>
   
   <hr>
+
   <h2>Radio</h2>
 
   <label>
     <input type="radio" name="example">
     Hello world
   </label>
-
+  <br>
   <label>
     <input type="radio" name="example" checked>
     Hello world
   </label>
-
+  <br>
   <label>
     <input type="radio" name="example" disabled>
     Hello world
   </label>
 
   <hr>
+
   <h2>Slider</h2>
 
   <label>
     <input type="range">
   </label>
+  <br>
   <label>
     <input type="range" disabled>
   </label>
