--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
     <button class="is-primary">Search</button>
   </div>
 
+  <h2>Accordion</h2>
+  <details>
+    <summary>Show the content</summary>
+
+    This is the content
+  </details>
 
   <h2>Tooltip</h2>
   <button
     onclick="document.getElementById('tooltip').hidden = !document.getElementById('tooltip').hidden"
   >Open</button>
-  <div role="tooltip" id="tooltip">
+  <div role="tooltip" id="tooltip" hidden>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ipsum minus veniam quod quis architecto sapiente perferendis iste, tempora, amet, quia eius velit vitae laudantium officia harum dignissimos ipsa dolor?
   </div>
 
